...
          isDark={isDark} isRTL={isRTL} focusedInput={focusedInput} setFocusedInput={setFocusedInput}
        />
        
        <AuthField 
          label={'البريد الإلكتروني'} 
          icon="mail" 
          placeholder="example@mail.com" 
          value={form.email} 
          onChangeText={(t: string) => setForm({...form, email: t})} 
          isDark={isDark} isRTL={isRTL} focusedInput={focusedInput} setFocusedInput={setFocusedInput}
        />
        
        <AuthField 
          label={'كلمة المرور'} 
          icon="lock" 
          placeholder="••••••••" 
          value={form.password} 
          onChangeText={(t: string) => setForm({...form, password: t})} 
          isPass 
          isDark={isDark} isRTL={isRTL} focusedInput={focusedInput} setFocusedInput={setFocusedInput} showPassword={showPassword} setShowPassword={setShowPassword}
        />

...
